Implementar URLs públicas para imágenes generadas
- Modificar API para devolver URLs públicas en lugar de imágenes directas
- Crear función _save_image_and_get_url() para guardar imágenes
- Actualizar endpoints para devolver JSON con URLs
- Agregar configuración de Nginx para servir archivos estáticos
- Crear config.py para configuración centralizada
- Actualizar documentación con ejemplos de respuesta JSON
- Crear directorio public/images/ en script de despliegue

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,14 @@ server {
     access_log /var/log/nginx/fastapi-image-generator.access.log;
     error_log /var/log/nginx/fastapi-image-generator.error.log;
     
+    # Servir archivos estáticos (imágenes generadas)
+    location /public/ {
+        alias /var/www/fastapi-image-generator/public/;
+        expires 1d;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+    
     # Configuración para FastAPI
     location / {
         proxy_pass http://127.0.0.1:8000;
