--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,26 @@
 
 server {
     listen 80;
-    server_name tu-servidor.com www.tu-servidor.com;  # Cambiar por tu dominio
+    server_name thumbnail.shortenqr.com;
+    
+    # Redirect HTTP to HTTPS
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name thumbnail.shortenqr.com;
+    
+    # SSL Configuration
+    ssl_certificate /etc/letsencrypt/live/thumbnail.shortenqr.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/thumbnail.shortenqr.com/privkey.pem;
+    
+    # SSL Security Settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
     
     # Logs
     access_log /var/log/nginx/fastapi-image-generator.access.log;
