Agregar generación de videos con efecto pan & scan
NUEVA FUNCIONALIDAD: Generación de videos cinematográficos

📹 Nuevo módulo video_generator.py:
- Efecto pan & scan cinematográfico sobre imagen original
- Text overlay estático con headline y highlight
- Mismos estilos visuales que imágenes generadas
- Soporte para múltiples direcciones de movimiento
- Smooth easing para movimientos suaves

🎬 Direcciones soportadas:
- left-to-right, right-to-left (panorámicas horizontales)
- top-to-bottom, bottom-to-top (panorámicas verticales)
- diagonal-tl-br, diagonal-tr-bl (movimientos diagonales)
- zoom-in, zoom-out (efectos de zoom)

🎯 Nuevo endpoint /generate-video-from-url:
- Formato 9:16 (1080x1920) optimizado para Instagram Stories/Reels
- Duración configurable (1-30 segundos)
- FPS configurable (default: 30)
- Codec H.264 optimizado para web
- Retorna URL pública del video generado

📦 Dependencias agregadas:
- moviepy==1.0.3 (generación de videos)
- opencv-python==4.8.1.78 (procesamiento de imágenes)
- numpy==1.24.3 (operaciones matriciales)

🔧 Infraestructura:
- Directorio public/videos para almacenamiento
- Nginx configurado para streaming de videos
- Deploy script actualizado con directorio de videos
- Documentación completa en README

✨ Características técnicas:
- Text overlay no afectado por movimiento de imagen
- Transformaciones afines para pan & scan
- Resize cover para mantener aspect ratio
- Centro de rotación y zoom configurables
- Margen dinámico según dirección de movimiento

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,12 +28,18 @@ server {
     access_log /var/log/nginx/fastapi-image-generator.access.log;
     error_log /var/log/nginx/fastapi-image-generator.error.log;
     
-    # Servir archivos estáticos (imágenes generadas)
+    # Servir archivos estáticos (imágenes y videos generados)
     location /public/ {
         alias /var/www/fastapi-image-generator/public/;
         expires 1d;
         add_header Cache-Control "public, immutable";
         access_log off;
+        
+        # Support for video streaming
+        location ~ \.(mp4|webm|ogg)$ {
+            add_header Content-Type video/mp4;
+            add_header Accept-Ranges bytes;
+        }
     }
     
     # Configuración para FastAPI
