FIX: Actualizar dependencias de video para Python 3.12
PROBLEMA: moviepy 1.0.3 no es compatible con Python 3.12
- Error de setuptools.build_meta
- numpy 1.24.3 requiere compilación problemática

SOLUCIÓN:
- Reemplazar moviepy con imageio + imageio-ffmpeg
- Usar numpy>=1.26.0 (precompilado para Python 3.12)
- Implementación directa de generación de frames
- Sin dependencia de MoviePy VideoClip

CAMBIOS EN video_generator.py:
- Función make_pan_scan_video() en lugar de make_pan_scan_clip()
- Genera todos los frames en memoria
- Usa imageio.mimsave() con codec H.264
- Mismo resultado visual, mejor compatibilidad

CAMBIOS EN requirements.txt:
- numpy>=1.26.0 (compatible Python 3.12)
- opencv-python>=4.8.0
- imageio>=2.31.0
- imageio-ffmpeg>=0.4.9 (maneja ffmpeg automáticamente)
- Dependencias auxiliares: decorator, proglog, tqdm

VENTAJAS:
✅ Compatible con Python 3.12
✅ Sin problemas de compilación
✅ Instalación más rápida
✅ Menor tamaño de dependencias
✅ Mismo efecto pan & scan

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ uvicorn==0.24.0
 pillow==10.1.0
 requests==2.31.0
 python-multipart==0.0.6
-moviepy==1.0.3
-opencv-python==4.8.1.78
-numpy==1.24.3
+numpy>=1.26.0
+opencv-python>=4.8.0
+decorator>=4.4.2
+imageio>=2.31.0
+imageio-ffmpeg>=0.4.9
+proglog>=0.1.10
+tqdm>=4.66.0
