--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
+annotated-types==0.7.0
+anyio==3.7.1
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
 fastapi==0.104.1
-uvicorn==0.24.0
-requests==2.31.0
+h11==0.16.0
+idna==3.11
+pillow==11.3.0
+pydantic==2.12.2
+pydantic_core==2.41.4
+python-dotenv==1.1.1
 python-multipart==0.0.6
+requests==2.31.0
+sniffio==1.3.1
+starlette==0.27.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.24.0
